# CoText

./: .gitignore  CMakeLists.txt  DBSample.sql  DBSampleOnlySchema.sql  README.md  Untitled Diagram.drawio  main.cpp
client/: AccountPacket.h  AlertNewDocument.cpp  AlertNewDocument.h  AlertNewDocument.ui  CMakeLists.txt  CMakeLists2.txt  ChooseName.cpp  ChooseName.h  ChooseName.ui  ClickableLabel.cpp  ClickableLabel.h  CursorPacket.cpp  CursorPacket.h  DBAuthDataClient.h  DBConfClient.cpp  DBConfClient.h  DeletePushButton.cpp  DeletePushButton.h  Document.cpp  Document.h  DocumentPacket.cpp  DocumentPacket.h  Identifier.cpp  Identifier.h  Join.cpp  Join.h  Join.ui  Login.cpp  Login.h  Login.ui  LoginPacket.cpp  LoginPacket.h  MainMenu.cpp  MainMenu.h  MainMenu.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  Message.cpp  Message.h  (+67 more)
client/gui/: ActionEventWatcher.cpp  ActionEventWatcher.h  DBConf.cpp  Login.cpp  Login.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  Register.cpp  Register.h  Register.ui  Resources.qrc  TextEditor.cpp  TextEditor.h  User.cpp  User.h  User.ui  UserHighlighter.cpp  UserHighlighter.h  UserWidget.cpp  UserWidget.h  UserWidget.ui  darkTheme.qss  main.cpp  qPDS.pro  qrc_Resources.cpp  ui_login.h  ui_mainwindow.h  ui_register.h  ui_user.h
client/icons/: CoText.icns
common/: AccountPacket.cpp  AccountPacket.h  Benchmark.cpp  Benchmark.h  CursorPacket.h  DocumentPacket.cpp  DocumentPacket.h  Identifier.cpp  Identifier.h  LoginPacket.cpp  LoginPacket.h  Message.cpp  Message.h  Packet.cpp  Packet.h  PacketDef.h  PingPacket.cpp  PingPacket.h  QSymbol.cpp  QSymbol.h  SharedEditor.cpp  SharedEditor.h  Shuffler.cpp  User.cpp  User.h
gui/: Login.ui  MainWindow.ui  Register.cpp  Register.ui
server/: AccountPacket.cpp  AccountPacket.h  CMakeLists.txt  Client.cpp  Client.h  DBAuthData.h  DBConf.cpp  DBConf.h  DocumentPacket.cpp  DocumentPacket.h  Identifier.h  LoginPacket.cpp  LoginPacket.h  Message.cpp  Message.h  Packet.cpp  Packet.h  PacketDef.h  Parser.cpp  Parser.h  PingPacket.cpp  PingPacket.h  QSymbol.cpp  QSymbol.h  Symbol.cpp  Symbol.h  User.cpp  User.h  main.cpp  securesocketclient.qrc  sslechoserver.cpp  sslechoserver.h  sslechoserver.pro
